Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.2.0
-
Fix Version/s: 5.2.0
-
Component/s: Documentation
-
Labels:None
-
Commits:7255749bc2cb3d32dc4761a70e722010a89d978c
Description
If I use the \include command then I get:
/home/xxx/dev/qt/qt5/qtlocation/src/location/places/qplace.cpp:62: warning: Unknown command '\include'
[The command '\include' was renamed '\input' by the configuration file. Use the new name.]
Now, if I replace \include by \input (based on the error message above) then the error changes to:
/home/xxx/dev/qt/qt5/qtlocation/src/location/places/qplace.cpp:63: warning: Cannot find qdoc include file 'place-definition.qdocinc'
I just about put the file everywhere (snippts, src, examples and the root doc dir).
The \snippet command is not an alternative as it assumes that the to-be-included text is source code only.
Attachments
Issue Links
- is required for
-
QTBUG-32173 Qt 5.2 Documentation Issues (meta bug)
-
- Closed
-